--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,25 @@
 
 :root {
   --player-height: 24px;
+  --app-background-color: #121212;
+  --app-text-color: #ffffff;
 }
 body {
   margin: 0px;
   padding: 0px;
-  background-color: #121212;
-  color: white;
+  background-color: var(--app-background-color);
+  color: var(--app-text-color);
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
 body::-webkit-scrollbar {
   display: none;
 }
 
+.background-app-color {
+  background-color: var(--app-background-color);
+}
 .h-23 {
   height: 5.75rem;
 }
